API fix since access token consists of two parts

--- a/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
+++ b/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Frame\Config\BaseConfigurationSection.cs" />
     <Compile Include="Frame\Config\ConfigReader.cs" />
     <Compile Include="Frame\Config\IUserSettings.cs" />
+    <Compile Include="Frame\Config\TwitterAccessToken.cs" />
     <Compile Include="Frame\Config\TwitterKeysConfiguration.cs" />
     <Compile Include="Frame\ActionOnDispatcher.cs" />
     <Compile Include="Frame\Twitter\ITwitterSession.cs" />
