--- a/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
+++ b/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
@@ -94,6 +94,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Frame\BusMessageExtensions.cs" />
     <Compile Include="Frame\Config\CheapUserSettings.cs" />
     <Compile Include="Frame\Config\ClientPublishingConventions.cs" />
     <Compile Include="Frame\Config\MainRegistry.cs" />
@@ -116,7 +117,7 @@
     <Compile Include="Frame\UI\InteractionButton\ConfirmationMessage.cs" />
     <Compile Include="Frame\UI\InteractionButton\RequestForAttention.cs" />
     <Compile Include="Frame\UI\RequestToActivateMainScreen.cs" />
-    <Compile Include="Frame\UI\ScreenConstructor.cs" />
+    <Compile Include="ShellOfApp\ScreenConstructor.cs" />
     <Compile Include="Frame\UI\SingleAttribute.cs" />
     <Compile Include="Frame\UI\WpfExtensions.cs" />
     <Compile Include="GatherAccessToken\GetAccessTokenView.xaml.cs">
@@ -134,15 +135,19 @@
     <Compile Include="ShellOfApp\AttentionViewModel.cs" />
     <Compile Include="ShellOfApp\ShellViewModel.cs" />
     <Compile Include="ShellOfApp\StreamOfAttentions.cs" />
+    <Compile Include="ShellOfApp\StreamOfScreensToActivate.cs" />
     <Compile Include="Startup\AppBootstrap.cs" />
     <Compile Include="Startup\StartupHandler.cs" />
     <Compile Include="Startup\RequestToStartup.cs" />
     <Compile Include="Frame\ServiceLocator.cs" />
     <Compile Include="Frame\Twitter\TwitterFacade.cs" />
-    <Compile Include="Timeline\MainTimeline.xaml.cs">
-      <DependentUpon>MainTimeline.xaml</DependentUpon>
+    <Compile Include="Timeline\HandleRequestToGetTwitterStatuses.cs" />
+    <Compile Include="Timeline\TimelinesView.xaml.cs">
+      <DependentUpon>TimelinesView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Timeline\MainTimelineViewModel.cs" />
+    <Compile Include="Timeline\TimelinesViewModel.cs" />
+    <Compile Include="Timeline\NewTwitterStatuses.cs" />
+    <Compile Include="Timeline\RequestToGetTwitterStatuses.cs" />
     <Page Include="Frame\UI\InteractionButton\InteractionButton.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -171,7 +176,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Timeline\MainTimeline.xaml">
+    <Page Include="Timeline\TimelinesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
