--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="grensesnitt.AddIn">
+      <HintPath>..\lib\grensesnitt.AddIn.dll</HintPath>
+    </Reference>
+    <Reference Include="grensesnitt.Framework">
+      <HintPath>..\lib\grensesnitt.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Moq">
       <HintPath>..\lib\Moq.dll</HintPath>
@@ -50,6 +56,7 @@
       <Link>Frame\AssertExtensions.cs</Link>
     </Compile>
     <Compile Include="Cloning_a_bus.cs" />
+    <Compile Include="When_using_caching_resolver.cs" />
     <Compile Include="Documentation_tests.cs" />
     <Compile Include="Frame\PublishPipelineTester.cs" />
     <Compile Include="Help\BusSetupPutShapeOnMsgA.cs" />
