--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MessageObservable.cs" />
     <Compile Include="Messages\ExceptionOccurred.cs" />
     <Compile Include="Messages\PeriodPassed.cs" />
+    <Compile Include="Subscriber.cs" />
     <Compile Include="Publishing\FireAndForgetPublisher.cs" />
     <Compile Include="Publishing\ParallelNonBlockingPublisher.cs" />
     <Compile Include="Publishing\IPublishPipelineMember.cs" />
@@ -95,14 +96,15 @@
     <Compile Include="Subscribing\SubscriptionShaperAggregate.cs" />
     <Compile Include="Subscribing\SubscriptionCustomizer.cs" />
     <Compile Include="Subscribing\UiDispatchingSubscription.cs" />
-    <Compile Include="SubscriptionAggregation.cs" />
     <Compile Include="Support\AbstractAutomaton.cs" />
     <Compile Include="Support\AbstractServices.cs" />
     <Compile Include="Support\AdHocAutomaton.cs" />
+    <Compile Include="Support\APIAttribute.cs" />
     <Compile Include="Support\DisposeContainer.cs" />
     <Compile Include="Support\MemBusException.cs" />
     <Compile Include="Support\IServices.cs" />
     <Compile Include="Support\ManualTrigger.cs" />
+    <Compile Include="Support\MustBePublicAttribute.cs" />
     <Compile Include="Support\PeriodAutomaton.cs" />
     <Compile Include="Support\PeriodicTrigger.cs" />
     <Compile Include="Support\Publish.cs" />
@@ -113,7 +115,7 @@
     <Compile Include="CachingResolver.cs" />
   </ItemGroup>
   <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\wraps\openwrap\build\OpenWrap.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
