--- a/MemBus.Tests.Performance/MemBus.Tests.Performance.csproj
+++ b/MemBus.Tests.Performance/MemBus.Tests.Performance.csproj
@@ -63,12 +63,9 @@
       <Name>MemBus</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="..\wraps\openwrap\build\OpenWrap.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
   </Target>
-  -->
 </Project>
