Ensuring a certain kind of scenario is supported in which MemBus infrastructure may interact with the instance implementing the subscription

--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Subscribing\Adapter\ISubscriptionBuilder.cs" />
     <Compile Include="Subscribing\Adapter\MethodBasedBuilder.cs" />
     <Compile Include="Subscribing\IAcceptDisposeToken.cs" />
+    <Compile Include="Subscribing\IKnowsSubscribedInstance.cs" />
     <Compile Include="Subscribing\ShapeToPassthrough.cs" />
     <Compile Include="Subscribing\SubscriptionPipeline.cs" />
     <Compile Include="Subscribing\DisposableSubscription.cs" />
