--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Help\ItfNonGenericForHandles.cs" />
     <Compile Include="Help\SomeCrazyHandler.cs" />
     <Compile Include="Help\SomeHandler.cs" />
+    <Compile Include="Integration_scenario_interaction_with_subscriber.cs" />
     <Compile Include="Using_SubscriptionAdapter_Service.cs" />
     <Compile Include="When_using_caching_resolver.cs" />
     <Compile Include="Documentation_tests.cs" />
