--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -62,8 +62,8 @@
     <Compile Include="ISubscriptionResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Publishing\ParallelBlockingPublisher.cs" />
-    <Compile Include="Publishing\PipelineProvider.cs" />
-    <Compile Include="Publishing\PublishPipeline.cs" />
+    <Compile Include="Publishing\PublishChain.cs" />
+    <Compile Include="Publishing\PublishChainCasing.cs" />
     <Compile Include="Publishing\PublishToken.cs" />
     <Compile Include="Publishing\SequentialPublisher.cs" />
     <Compile Include="RxEnabledObservable.cs" />
