--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Subscribing\Adapter\InterfaceBasedBuilder.cs" />
     <Compile Include="Subscribing\Adapter\ISubscriptionBuilder.cs" />
     <Compile Include="Subscribing\Adapter\MethodBasedBuilder.cs" />
+    <Compile Include="Subscribing\PublishingMethodInvocation.cs" />
     <Compile Include="Subscribing\IAcceptDisposeToken.cs" />
     <Compile Include="Subscribing\IKnowsSubscribedInstance.cs" />
     <Compile Include="Subscribing\ShapeToPassthrough.cs" />
