--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -109,7 +109,9 @@
     <Compile Include="Support\UsefulExtensions.cs" />
     <Compile Include="StandardResolver.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
