--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -63,19 +63,16 @@
     <Compile Include="Integration\Integration_scenario_interaction_with_subscriber.cs" />
     <Compile Include="Help\RxBasedFooObservable.cs" />
     <Compile Include="Integration\Unexpected_disposal_of_subscriptions.cs" />
-    <Compile Include="Using_publishing_methods.cs" />
-    <Compile Include="Using_SubscriptionAdapter_Service.cs" />
+    <Compile Include="Publishing\Using_publishing_methods.cs" />
+    <Compile Include="Subscribing\Using_SubscriptionAdapter_Service.cs" />
     <Compile Include="Rx\When_MemBus_is_used_as_Observable.cs" />
     <Compile Include="Integration\When_using_ioc_support.cs" />
     <Compile Include="When_using_standard_resolver.cs" />
     <Compile Include="Documentation_tests.cs" />
     <Compile Include="Frame\PublishPipelineTester.cs" />
-    <Compile Include="Help\BusSetupPutShapeOnMsgA.cs" />
-    <Compile Include="Help\BusSetupWithDefaultShape.cs" />
-    <Compile Include="Help\BusSetupWithTestShapers.cs" />
-    <Compile Include="When_subscribing.cs" />
-    <Compile Include="When_using_disposable_buses.cs" />
-    <Compile Include="When_using_the_bus_in_the_ui.cs" />
+    <Compile Include="Subscribing\When_subscribing.cs" />
+    <Compile Include="Integration\When_using_disposable_buses.cs" />
+    <Compile Include="Integration\When_using_the_bus_in_the_ui.cs" />
     <Compile Include="Frame\Helpers.cs" />
     <Compile Include="Help\Messages.cs" />
     <Compile Include="Help\MockSubscription.cs" />
@@ -85,11 +82,11 @@
     <Compile Include="Help\TestShaper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Using_Abstract_Automaton.cs" />
-    <Compile Include="Using_Composite_Subscription.cs" />
-    <Compile Include="Using_disposable_method_subscription.cs" />
-    <Compile Include="Using_Publish_Pipeline.cs" />
-    <Compile Include="Using_subscription_shapes.cs" />
-    <Compile Include="When_Resolving_Subscriptions.cs" />
+    <Compile Include="Subscribing\Using_Composite_Subscription.cs" />
+    <Compile Include="Subscribing\Using_disposable_method_subscription.cs" />
+    <Compile Include="Publishing\Using_Publish_Pipeline.cs" />
+    <Compile Include="Subscribing\Using_subscription_shapes.cs" />
+    <Compile Include="Subscribing\When_Resolving_Subscriptions.cs" />
     <Compile Include="When_using_dynamics.cs" />
     <Compile Include="Integration\When_using_the_bus.cs" />
     <Compile Include="Integration\When_using_the_bus_with_flexible_subscriptions.cs" />
