Refactoring: Sperated the finding of methods from the subsequent construction of subscriptions to be able to run a Distinct. Side-effect: nicer design

--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Subscribing\Using_SubscriptionAdapter_Service.cs" />
     <Compile Include="Rx\When_MemBus_is_used_as_Observable.cs" />
     <Compile Include="Integration\When_using_ioc_support.cs" />
+    <Compile Include="Third_party_tests.cs" />
     <Compile Include="When_using_standard_resolver.cs" />
     <Compile Include="Documentation_tests.cs" />
     <Compile Include="Frame\PublishPipelineTester.cs" />
