--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -79,8 +79,9 @@
     <Compile Include="Subscribing\Adapter\ConstructSubscriptionExtension.cs" />
     <Compile Include="Subscribing\Adapter\FlexibleSubscribeAdapter.cs" />
     <Compile Include="Subscribing\Adapter\InterfaceBasedBuilder.cs" />
-    <Compile Include="Subscribing\Adapter\ISubscriptionBuilder.cs" />
+    <Compile Include="Subscribing\Adapter\IMethodInfoScanner.cs" />
     <Compile Include="Subscribing\Adapter\MethodBasedBuilder.cs" />
+    <Compile Include="Subscribing\Adapter\SubscriptionBuilder.cs" />
     <Compile Include="Subscribing\PublishingMethodInvocation.cs" />
     <Compile Include="Subscribing\IAcceptDisposeToken.cs" />
     <Compile Include="Subscribing\IKnowsSubscribedInstance.cs" />
